--- a/style.css
+++ b/style.css
@@ -51,7 +51,11 @@ input{
     border: none;
     padding-left: 30px;
 
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Instrumental', Serif;
+    color: blueviolet;
+    font-style: italic;
+    font-size: 16px;
 }
 input:focus{
     outline: 1px solid black;
@@ -90,7 +94,8 @@ input:focus{
     align-items: center;
     width: 250px;
     height: 330px;
-    background-color: inherit;
+    /* background-color: inherit; */
+    
     border: 1px solid black;
     box-shadow: 10px 10px 10px hsl(0, 0%, 70%);
     border-radius: 20px;
@@ -159,6 +164,22 @@ input:focus{
 
 .name{
     color: hsl(273, 100%, 50%);
+}
+
+.purple{
+       font-family: Instrument, Serif;
+       font-style: italic;
+
+       font-size: 70px;
+
+         /* background: linear-gradient(90deg, hsl(273, 100%, 50%), #ee0979); */
+         background: linear-gradient(180deg, hsl(273, 100%, 50%), hsl(268, 100%, 50%));
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+
+
+
 }
 
 
